Fixed layout shift by forcing scrollbar to always be visible

--- a/github-portal/src/App.css
+++ b/github-portal/src/App.css
@@ -476,3 +476,8 @@ section h2 {
         margin-top: 250px;
     }
 }
+
+html {
+    scrollbar-gutter: stable;
+    overflow-y: scroll;
+}
